--- a/practicegame/.godot/editor/editor_layout.cfg
+++ b/practicegame/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://addons/")
+dock_filesystem_selected_paths=PackedStringArray("res://Objects/SpriteTilesGrass.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Objects/", "res://addons/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -30,10 +30,10 @@ dock_5="Inspector,Node,History,Commit"
 
 open_scenes=PackedStringArray("res://Scenes/2Dworld.tscn")
 current_scene="res://Scenes/2Dworld.tscn"
-center_split_offset=0
+center_split_offset=-245
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-selected_bottom_panel_item=13
+selected_bottom_panel_item=12
 
 [EditorWindow]
 
